# kodge-rad-core

./: .gitignore  AUTHORS.txt  Cargo.toml  README.md  STATUS.txt  TODO  output
config/: config.json  config.yaml  log_conf.yaml  map.yaml  registry.yaml  routes.yaml
config/apps/: active.yaml  app1.yaml  app_echo.yaml  app_echo_internal.yaml  app_echo_system.yaml  app_webserver.yaml
config/apps/echo/: manifest.yaml  rad-echo
config/apps/echo_system/: manifest.yaml
config/apps/rad-webserver/: manifest.yaml  rad-webserver
config/apps/workflow1/: workflow.yaml
config/cache/: manifest.json
config/cache/echo/: config.yaml  echo.sh
config/cache/echo_internal/: config.yaml
config/cache/echo_system/: config.yaml
config/cache/input1/: config.yaml
config/cache/output1/: config.yaml
config/cache/rad-webserver/: config.yaml
config/cache/reader/: reader.sh
config/cache/writer/: config.yaml  writer.sh
docs/: Overview.odg  routing.txt
src/: app.rs  app_container.rs  app_manager.rs  app_utils.rs  bin.rs  config.rs  error.rs  main.rs  process.rs  workflow.rs
src/broker/: app_broker.rs  auth.rs  auth_types.rs  broker.rs  broker_types.rs  connection.rs  control.rs  mod.rs  protocol.rs  router.rs
src/client/: apps.rs
src/config/: active.rs  app.rs  config.rs  config_common.rs  mod.rs  registry.rs  workflow.rs
src/control/: control_plane.rs  message_types.rs  mod.rs
src/router/: router.rs
src/runner/: app_runner.rs  mod.rs
src/utils/: app_runner.rs  crc.rs  mod.rs  rad_utils.rs  timer.rs  types.rs  utils.rs
(+12 files in other folders)
