[package]
name = "rad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = {version = "0.9.33"}
serde_json = "1.0.117"
tokio = {version = "1.37.0", features = ["full"]}
futures = "0.3.30"
chrono = "0.4.38"
ctrlc-async = { version = "3.2.2", features = ["termination"]}
log4rs = "1.3.0"
log = "0.4.21"
base64 = "0.22.1"