[package]
name = "rad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = {version = "0.9.33"}
serde_json = "1.0.133"
tokio = {version = "1.42.0", features = ["full"]}
futures = "0.3.31"
chrono = "0.4.39"
ctrlc-async = { version = "3.2.2", features = ["termination"]}
log4rs = "1.3.0"
log = "0.4.22"
base64 = "0.22.1"
rand = "0.8.5"
