[package]
name = "rad-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = {version = "0.9.34+deprecated"}
serde_json = "1.0.135"
tokio = {version = "1.43.0", features = ["full"]}
futures = "0.3.31"
chrono = "0.4.39"
ctrlc-async = { version = "3.2.2", features = ["termination"]}
log4rs = "1.3.0"
log = "0.4.22"
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
urlencoding = "2.1.3"